Segunda entrega Contrato  e inquilino

--- a/Inmobiliaria_2022/Views/Shared/_Layout.cshtml
+++ b/Inmobiliaria_2022/Views/Shared/_Layout.cshtml
@@ -29,6 +29,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Inquilinos" asp-action="Index">Inquilino</a>
                          </li>
 
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmuebles" asp-action="Index">Inmueble</a>
+                         </li>
+
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contratos" asp-action="Index">Contrato</a>
+                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
