--- a/Inmobiliaria_2022/Views/Home/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center" >
-    @*<h1 class="display-4">*@</p>Bienvenido a tu inmobiliaria preferida por su excelencia<p>@*</h1>*@
+    </p>Bienvenido a tu inmobiliaria preferida por su excelencia<p>
     @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 </div>
