--- a/Inmobiliaria_2022/Views/Contratos/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Inmobiliaria_2022.Models.Contrato
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
+<h1>Detalles</h1>
 
-
-<h3>Seguro que quiere eliminarlo?</h3>
 <div>
     <h4>Contrato</h4>
     <hr />
@@ -42,8 +41,8 @@
             @Html.DisplayFor(model => model.Monto)
         </dd>
         <dt class = "col-sm-2">
-            @*@Html.DisplayNameFor(model => model.InmuebleId)*@
-            Inmueble
+@*            @Html.DisplayNameFor(model => model.InmuebleId)
+*@            Inmueble
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.inmueble.Direccion)
@@ -53,15 +52,12 @@
             Inquilino
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.inquilino.Apellido) @Html.DisplayFor(model => model.inquilino.Nombre)
-
+            @Html.DisplayFor(model => model.inquilino.Nombre)
+            @Html.DisplayFor(model => model.inquilino.Apellido)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <div class="form-group">
-            <input type="submit" value="Eliminar" class="btn btn-danger" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-        </div>
-    </form>
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
+    <a asp-action="Index">Volver al Listado</a>
 </div>
