--- a/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
@@ -1,19 +1,18 @@
 ﻿@model Inmobiliaria_2022.Models.Inmueble
 
 @{
-    ViewData["Title"] = "eliminar";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Detalles</h1>
 
-<h3>¿Estás seguro de que quieres eliminar este inmueble?</h3>
 <div>
     <h4>Inmueble</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+       @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
-        </dt>
+        </dt>*@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
@@ -65,21 +64,29 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Longitud)
         </dd>
-      
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EstaPublicado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EstaPublicado)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EstaHabilitado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EstaHabilitado)
+        </dd>
         <dt class = "col-sm-2">
 @*            @Html.DisplayNameFor(model => model.PropietarioId)
 *@            Propietario
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Propietario.Nombre)
-            @Html.DisplayFor(model => model.Propietario.Apellido) 
+            @Html.DisplayFor(model => model.Propietario.Apellido)
         </dd>
     </dl>
-    
-     <form asp-action="Delete">
-        <div class="form-group">
-           <input type="submit" value="Eliminar" class="btn btn-danger" />
-           <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-        </div>
-      </form>
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
+    <a asp-action="Index">Volver al listado</a>
 </div>
