--- a/Inmobiliaria_2022/Views/Pagos/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Create.cshtml
@@ -1,72 +1,69 @@
 ﻿@model Inmobiliaria_2022.Models.Pago
 
-@{ ViewData["Title"] = "Create"; }
+@{
+    ViewData["Title"] = "Create";
+}
 
-<div class="card bg-light border border-primary">
-    <div class="card-header border-bottom border-primary bg-light">
-        <h4 class="card-title text-primary mt-2">Crear Pago</h4>
-    </div>
-    <div class="card-body">
+<h1>Crear</h1>
 
+<h4>Pago</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Numero" class="control-label"></label>
-
-                @if (ViewBag.pago == null)
-                {
-                    <input asp-for="Numero" class="form-control" value="1" readonly />
+                @if (ViewBag.Pago == null){
+                    <input asp-for="Numero" class="form-control" value="1" reandoly />
                 }
-                else
-                {
-                    int num = int.Parse(@ViewBag.Pago.Numero) + 1;
-                    <input asp-for="Numero" class="form-control" value="@num" readonly />
+                else{
+                    int num = int.Parse(@ViewBag.Pago.Numero) +1;
+                    <input asp-for="Numero" class="form-control" value="@num" reandoly />
 
                 }
-
                 <span asp-validation-for="Numero" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" required />
+                <input asp-for="Fecha" class="form-control required" />
                 <span asp-validation-for="Fecha" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Importe" class="control-label"></label>
-                <input asp-for="Importe" class="form-control" value="" required/>
+                <input asp-for="Importe" class="form-control required" />
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group">
-
                 <label class="control-label">Propiedad</label>
-                <input class="form-control" value=".Contrato.inmueble.Direccion" readonly />
+                <input class="form-control" value="@ViewBag.Contrato.Inmueble.Direccion" readonly />
                 <input asp-for="Id" class="form-control" type="hidden" value="@ViewBag.Contrato.Id" />
             </div>
-           @* <div class="form-group">
-                <label asp-for="ContratoId" class="control-label"></label>
-                <input asp-for="ContratoId" class="form-control" />
-                <span asp-validation-for="ContratoId" class="text-danger"></span>
+          @*  <div class="form-group">
+                <label asp-for="Buscar" class="control-label"></label>
+                <input asp-for="Buscar" class="form-control" />
+                <span asp-validation-for="Buscar" class="text-danger"></span>
             </div>*@
-
             <div class="form-group">
-
                 <label class="control-label">Inquilino</label>
-                
-                <input class="form-control" value="@ViewBag.Inquilino.Nombre" "+" readonly />
+                <input class="form-control" value="@ViewBag.Inquilino.Nombre" readonly />
             </div>
-
-
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-
-
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
