--- a/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
@@ -15,9 +15,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Numero)
             </th>
             <th>
@@ -26,22 +23,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Importe)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContratoId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Buscar)
-            </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
         @if(Model!=null)
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Numero)
             </td>
@@ -52,15 +39,8 @@
                 @Html.DisplayFor(modelItem => item.Importe)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContratoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Buscar)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id  }) |
+                @Html.ActionLink("Delete", "Delete", new {  id=item.Id  })
             </td>
         </tr>
 }
