--- a/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inmobiliaria_2022.Models.Propietario
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
 <h1>Crear</h1>
@@ -12,7 +12,11 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+            @*<div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" type="hidden"/>
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -45,16 +49,14 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
-                <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
 
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+      
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
