--- a/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Index.cshtml
@@ -24,15 +24,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Dni)
             </th>
-            <th>
+           @* <th>
                 @Html.DisplayNameFor(model => model.Telefono)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
+            </th>*@
+            @*<th>
                 @Html.DisplayNameFor(model => model.Clave)
-            </th>
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -51,23 +51,23 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Dni)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
+      @*    <td>
+                @Html.DisplayFor(modelItem => item.Telefono )
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Clave)
-            </td>
+            </td>*@
            <td>
-				<a asp-action="Edit" asp-route-id="@item.Id" title="Editar"> 
-                    <span class="lnr lnr-pencil"></span>Editar</a>
-				<a asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"> 
-                    <span class="lnr lnr-cross"></span>Eliminar</a>
-				
-    
-
+				@*<a asp-action="Edit" asp-route-id="@item.Id" title="Editar">Editar</a>
+				<a asp-action="Delete" asp-route-id="@item.Id" title="Eliminar">Eliminar</a>*@	           
+               
+                  @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+                  @Html.ActionLink("Detalles", "Details", new { id=item.Id}) |
+                  @Html.ActionLink("Eliminar", "Delete", new {id=item.Id })
+                  
 			</td>
         </tr>
 }
