--- a/Inmobiliaria_2022/Views/Shared/_Layout.cshtml
+++ b/Inmobiliaria_2022/Views/Shared/_Layout.cshtml
@@ -22,6 +22,10 @@
                     <ul class="navbar-nav flex-grow-1">
 
                          <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                         </li>
+
+                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Propietarios" asp-action="Index">Propietario</a>
                          </li>
 
