--- a/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar</h1>
+<h1>Eliminar Usuario</h1>
 
-<h3>Seguro que decea eliminar?</h3>
+<h3>Seguro que desea eliminar ?</h3>
 <div>
-    <h4>Usuario</h4>
     <hr />
     <dl class="row">
             <dt class="col-sm-2">
@@ -45,8 +44,14 @@
                 @Html.DisplayNameFor(model => model.Rol)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Rol)
+                @Html.DisplayFor(model => model.RolNombre)
             </dd>
+            @*<dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.RolNombre)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.RolNombre)
+            </dd>*@
             </dl>
 
             <form asp-action="Delete">
