--- a/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
@@ -19,12 +19,12 @@
         </div>
         <div class="form-group">
             <label asp-for="Nombre" class="control-label"></label>
-            <input asp-for="Nombre" class="form-control" readonly />
+            <input asp-for="Nombre" class="form-control"  />
             <span asp-validation-for="Nombre" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Apellido" class="control-label"></label>
-            <input asp-for="Apellido" class="form-control" readonly />
+            <input asp-for="Apellido" class="form-control"  />
             <span asp-validation-for="Apellido" class="text-danger"></span>
         </div>
         <div class="form-group">
