--- a/Inmobiliaria_2022/Views/Pagos/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Create.cshtml
@@ -12,19 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
+            
             <div class="form-group">
-                <label asp-for="Numero" class="control-label"></label>
+                <label asp-for="Numero" class="control-label" ></label>
+
                 @if (ViewBag.Pago == null){
-                    <input asp-for="Numero" class="form-control" value="1" reandoly />
+                    <input asp-for="Numero" class="form-control" value="1" reandoly/>
                 }
                 else{
                     int num = int.Parse(@ViewBag.Pago.Numero) +1;
-                    <input asp-for="Numero" class="form-control" value="@num" reandoly />
+                    <input asp-for="Numero" class="form-control" value="@num" />
 
                 }
                 <span asp-validation-for="Numero" class="text-danger"></span>
@@ -39,20 +36,17 @@
                 <input asp-for="Importe" class="form-control required" />
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label class="control-label">Propiedad</label>
-                <input class="form-control" value="@ViewBag.Contrato.Inmueble.Direccion" readonly />
-                <input asp-for="Id" class="form-control" type="hidden" value="@ViewBag.Contrato.Id" />
+                <input class="form-control" value="@ViewBag.Inmueble.Costo" readonly/> 
             </div>
-          @*  <div class="form-group">
-                <label asp-for="Buscar" class="control-label"></label>
-                <input asp-for="Buscar" class="form-control" />
-                <span asp-validation-for="Buscar" class="text-danger"></span>
-            </div>*@
+
             <div class="form-group">
                 <label class="control-label">Inquilino</label>
                 <input class="form-control" value="@ViewBag.Inquilino.Nombre" readonly />
             </div>
+            <input asp-for="ContratoId" class="form-control" type="hidden" value="@ViewBag.Contrato.Id" />@*exit*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
