--- a/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Listapagos.cshtml
@@ -9,8 +9,9 @@
 
 
 <p>   
-    <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear nuevo</a>@*exit*@
+    <a asp-controller="Pagos" asp-action="Create" asp-route-id="@ViewBag.Contrato.Id" title="Lista de pagos">Crear nuevo</a>
 </p>
+    
 <table class="table">
     <thead>
         <tr>
