--- a/Inmobiliaria_2022/Views/Pagos/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Pagos/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
+    @Html.ActionLink("Editar", "Edit", new {  id = Model.Id  }) |
     <a asp-action="Index">Volver al listado</a>
 </div>
