Usuario:superAdmin@gmail.com contraseña:1234 Usuario:administrador@gmail.com Contraseña:1234 Usuario:empleado@gmail.com Contraseña:1234 -el "empleado" solo puede agregar , editar pero  no puede editar el atributo ROL que es de usuario (eliminar no puede) -el "administrador" elimina, agrega pero no edita -el "superadmin" edita,elimina y agrega, el email del usuario no se edita porq es el Username

--- a/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Delete.cshtml
@@ -3,10 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<h1>Eliminar </h1>
 
-
-
-<h3>Seguro que quiere eliminarlo?</h3>
+<h4>Seguro que quiere eliminarlo?</h4>
 <div>
     <h4>Contrato</h4>
     <hr />
