--- a/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "eliminar";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>¿Estás seguro de que quieres eliminar este inmueble?</h3>
+<h4>¿Estás seguro de que quieres eliminar este inmueble?</h4>
 <div>
     <h4>Inmueble</h4>
     <hr />
