--- a/Inmobiliaria_2022/Views/Contratos/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Contratos/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card bg-light border border-primary">
         <div class="card-header border-bottom border-primary bg-light">
-            <h4 class="card-title text-primary">Crear Alquiler</h4>
+            <h4 class="card-title text-primary">Crear Contrato</h4>
         </div>
         <div class="card-body">
 
@@ -59,7 +59,7 @@
                     </select>
                     <span asp-validation-for="InquilinoId" class="text-danger"> </span>
                 </div>
-
+         
                 <div class="form-group">
                     <input type="submit" value="Crear" class="btn btn-primary" />
                     <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
