--- a/Inmobiliaria_2022/Views/Inmuebles/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Create.cshtml
@@ -76,14 +76,13 @@
 
             <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Volver al Listado</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
