--- a/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Details.cshtml
@@ -10,9 +10,9 @@
     <h4>Inmueble</h4>
     <hr />
     <dl class="row">
-       @* <dt class = "col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
-        </dt>*@
+        </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
@@ -81,12 +81,11 @@
 *@            Propietario
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Propietario.Nombre)
-            @Html.DisplayFor(model => model.Propietario.Apellido)
+            @Html.DisplayFor(model => model.Propietario.Nombre)@Html.DisplayFor(model => model.Propietario.Apellido)
         </dd>
-    </dl>
+        </dl>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
-    <a asp-action="Index">Volver al listado</a>
-</div>
+    <a asp-action="Index">Volver al Listado</a>
+</div
