--- a/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inmuebles/Edit.cshtml
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Tipo" class="control-label"></label>
-                <input asp-for="Tipo" class="form-control" />
+                <input asp-for="TipoNombre" class="form-control" />
                 <span asp-validation-for="Tipo" class="text-danger"></span>
             </div>
             @*<div class="form-group">
@@ -79,13 +79,10 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Editar" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">volver al Listado</a>
 </div>
 
 @section Scripts {
