--- a/Inmobiliaria_2022/Views/Inquilinos/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Inquilinos/Edit.cshtml
@@ -41,14 +41,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Editar" class="btn btn-primary" />
+                <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Volver al listado</a>
 </div>
 
 @section Scripts {
