--- a/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Propietarios/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Eliminar</h1>
 
-<h3>¿Seguro que desea eliminar el propietario?</h3>
+<h4>¿Seguro que desea eliminar el propietario?</h4>
 <div>
     <h4>Propietario</h4>
     <hr />
@@ -56,7 +56,9 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">volver al listado</a>
+        <div class="form-group">
+            <input type="submit" value="Eliminar" class="btn btn-danger" />
+            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+        </div>
     </form>
 </div>
