--- a/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create nuevo</h1>
 
 <h4>Usuario</h4>
 <hr />
@@ -53,7 +53,7 @@
 
                 <div class="form-group">
                     <input type="submit" value="Crear" class="btn btn-primary" />
-                    <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+                    <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
                 </div>
         </form>
     </div>
