--- a/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Delete.cshtml
@@ -4,60 +4,61 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Eliminar Usuario</h1>
+<h1>Eliminar </h1>
 
-<h3>Seguro que desea eliminar ?</h3>
+<h4>Seguro que desea eliminar el usuario ?</h4>
 <div>
+    <h4>Usuario</h4>
     <hr />
     <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Id)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Id)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Nombre)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Nombre)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Apellido)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Apellido)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Email)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Clave)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Clave)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Rol)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.RolNombre)
-            </dd>
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.RolNombre)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.RolNombre)
-            </dd>*@
-            </dl>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Nombre)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Nombre)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Apellido)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Apellido)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Clave)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Clave)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Rol)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RolNombre)
+        </dd>
+        @*<dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RolNombre)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RolNombre)
+        </dd>*@
+        </dl>
 
-            <form asp-action="Delete">
-                <div class="form-group">
-                    <input type="submit" value="Eliminar" class="btn btn-danger" />
-                    <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
-                </div>
-            </form>
+        <form asp-action="Delete">
+            <div class="form-group">
+                <input type="submit" value="Eliminar" class="btn btn-danger" />
+                <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+            </div>
+        </form>
 </div>
