--- a/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
+++ b/Inmobiliaria_2022/Views/Usuarios/Edit.cshtml
@@ -52,13 +52,12 @@
         }
         <div class="form-group">
             <input type="submit" value="Editar" class="btn btn-primary" />
-            <a class="btn btn-secondary" asp-action="Index">Volver a Lista</a>
+            <a class="btn btn-secondary" asp-action="Index">Volver al Listado</a>
         </div>
-    </form>
+      </form>
     </div>
 </div>
-
-
+       
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
